--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "alembic>=1.16.4",
+    "asyncpg>=0.30.0",
+    "fastapi>=0.116.1",
+    "greenlet>=3.2.3",
     "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
+    "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.41",
+    "uvicorn>=0.35.0",
 ]
