--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,20 @@ dependencies = [
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
+    "ruff>=0.12.5",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
+
+[tool.ruff]
+line-length = 120
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]
+ignore = ["E501"]
+fixable = ["ALL"]
+
+
+[tool.ruff.format]
+quote-style = "double"          # или 'single'
