Добавлено создание UserBot

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "icecream>=2.1.5",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "pyrogram>=2.0.106",
+    "python-decouple>=3.8",
     "python-dotenv>=1.1.1",
     "redis>=6.2.0",
     "ruff>=0.12.5",
